# letrero-web

./: .env.example  README.md  pyproject.toml  run.py  start.sh
.github/workflows/: ci.yml
cartel_app/: __init__.py  db.py  defaults.py  routes.py
cartel_app/static/css/: app.css
cartel_app/static/js/: dashboard.js  display.js  matrix_engine.js
cartel_app/templates/: base.html  dashboard.html  display.html
tests/: test_smoke.py
